text/overflow fixed for adding posts + ading comments fixed

--- a/app/src/components/CreatePost.css
+++ b/app/src/components/CreatePost.css
@@ -16,25 +16,6 @@
   margin-bottom: 10px;
 }
 
-.title-input,
-.body-input {
-  padding: 10px;
-  width:500px;
-  border: none;
-  border-radius: 5px;
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  font-size: 16px;
-  color: #333;
-  transition: box-shadow 0.3s ease;
-}
-
-.title-input:focus,
-.body-input:focus {
-  outline: none;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
 .radio-buttons {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
